# SolverCPP

./: CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.h  DenseSolver.cpp  DenseSolver.h  LICENSE  Matrix.cpp  Matrix.h  README.md  TestRunner.cpp  TestRunner.h  compare.h  main.cpp  plot.py  sparseSolver.cpp  sparseSolver.h  test.h  utilities.h
data/: CG_data.txt  Cholesky_data.txt  GaussSeidel_dense_100-1000.txt  GaussSolver_dense_100-1000.txt  Jacobi_dense_100-1000.txt  LUSolver_dense_100-1000.txt
individualcoursework-advancedprogramming-2021-2022-acse-zl1021-main/: CSRMatrix.cpp  CSRMatrix.h  Matrix.cpp  Matrix.h  README.md  acse-zl1021-advProg-A.1-main.cpp  acse-zl1021-advProg-A.2-main.cpp  acse-zl1021-advProg-B.1-main.cpp  acse-zl1021-advProg-C-main.cpp  acse-zl1021-advProg-D.2-main.cpp  acse-zl1021-advProg-E-Matrix.cpp  acse-zl1021-advProg-E-Matrix.h  acse-zl1021-advProg-E-main.cpp
